force-app/main/default/objects/Bill__c/fields/bill_status__c.field-meta.xml
<CustomField>
    <fullName>bill_status__c</fullName>
    <label>bill status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>