force-app/main/default/objects/Bill__c/fields/GivenPayment__c.field-meta.xml
<CustomField>
    <fullName>GivenPayment__c</fullName>
    <label>GivenPayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>