force-app/main/default/objects/Bill__c/fields/Lab_Charge__c.field-meta.xml
<CustomField>
    <fullName>Lab_Charge__c</fullName>
    <label>Lab Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>