force-app/main/default/objects/Bill__c/fields/No_Of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days__c</fullName>
    <label>No Of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>