force-app/main/default/objects/Bill__c/fields/Nursing_Charge__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Charge__c</fullName>
    <label>Nursing Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>