force-app/main/default/objects/Bill__c/fields/RemainingPayment__c.field-meta.xml
<CustomField>
    <fullName>RemainingPayment__c</fullName>
    <formula>Total_Bill__c - GivenPayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RemainingPayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>