force-app/main/default/objects/Bill__c/fields/Room_Charge__c.field-meta.xml
<CustomField>
    <fullName>Room_Charge__c</fullName>
    <label>Room Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>